refactor: update DTO defs